update status page - title

--- a/config copy.yml
+++ b/config copy.yml
@@ -3,7 +3,7 @@
 ############################################################
 
 # Complete page title
-title: ClearStatus systems status page
+title: ClearStatus systems status page - UPDATED
 
 # Language config
 languageCode: en
