--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@
 ############################################################
 
 # Complete page title
-title: ClearStatus systems status page
+title: ClearStatus systems status page - UPDATED
 
 # Language config
 languageCode: en
